--- a/WebApp/Views/ClientesDto/Details.cshtml
+++ b/WebApp/Views/ClientesDto/Details.cshtml
@@ -38,7 +38,14 @@
             @Html.DisplayNameFor(model => model.FechaNacimiento)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaNacimiento)
+            @*@String.Format("{0:dd/MM/yyyy}",Model.FechaNacimiento)*@
+            @Html.DisplayFor(model => model.FechaNacimientoDisplay)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.GeneroId)
+        </dt>
+        <dd class="col-sm-10">
+            @ViewBag.Genero
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Domicilio)
@@ -59,6 +66,12 @@
             @Html.DisplayFor(model => model.Telefono)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NacionalidadId)
+        </dt>
+        <dd class="col-sm-10">
+            @ViewBag.Nacionalidad
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DomicilioAlternativo)
         </dt>
         <dd class="col-sm-10">
@@ -77,28 +90,42 @@
             @Html.DisplayFor(model => model.PersonaPoliticamenteExpuesta)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TipoActividadId)
+        </dt>
+        <dd class="col-sm-10">
+            @ViewBag.TipoActividad
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FechaInicioActividad)
+        </dt>
+        <dd class="col-sm-10">
+            @*@String.Format("{0:dd/MM/yyyy}",Model.FechaInicioActividad)*@
+            @Html.DisplayFor(model => model.FechaInicioActividadDisplay)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FechaFinActividad)
+        </dt>
+        <dd class="col-sm-10">
+            @*@String.Format("{0:dd/MM/yyyy}",Model.FechaFinActividad)*@
+            @Html.DisplayFor(model => model.FechaFinActividadDisplay)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MontoLiquidoPercibido)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MontoLiquidoPercibidoDisplay)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Scoring)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Scoring)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaInicioActividad)
+            @Html.DisplayNameFor(model => model.EstadoCivilId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaInicioActividad)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaFinActividad)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FechaFinActividad)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MontoLiquidoPercibido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MontoLiquidoPercibido)
+            @ViewBag.EstadoCivil
         </dd>
 
         @if (Model.ConyugeCedulaIdentidad != null)
@@ -129,7 +156,14 @@
                     @Html.DisplayNameFor(model => model.ConyugeFechaNacimiento)
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ConyugeFechaNacimiento)
+                    @*@String.Format("{0:dd/MM/yyyy}",Model.ConyugeFechaNacimiento)*@
+                    @Html.DisplayFor(model => model.ConyugeFechaNacimientoDisplay)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ConyugeGeneroId)
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.ConyugeGenero
                 </dd>
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.ConyugeDomicilio)
@@ -148,6 +182,12 @@
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.ConyugeTelefono)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ConyugeNacionalidadId)
+                </dt>
+                <dd class="col-sm-10">
+                    @ViewBag.ConyugeNacionalidad
                 </dd>
                 <hr />
             </div>
