Se agrega logica de pago de Cuotas, se cambia extructura de Base de Datos

--- a/WebApp/Views/Cuotas/Create.cshtml
+++ b/WebApp/Views/Cuotas/Create.cshtml
@@ -46,11 +46,11 @@
                 <input asp-for="MontoSeguros" class="form-control" />
                 <span asp-validation-for="MontoSeguros" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="MontoTotalCuota" class="control-label"></label>
                 <input asp-for="MontoTotalCuota" class="form-control" />
                 <span asp-validation-for="MontoTotalCuota" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="UrlDocumento" class="control-label"></label>
                 <input asp-for="UrlDocumento" class="form-control" />
