--- a/WebApp/Views/Pagos/Details.cshtml
+++ b/WebApp/Views/Pagos/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.UrlDocumento)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cuota)
+            @Html.DisplayNameFor(model => model.PrestamoAprobado)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cuota.Id)
+            @Html.DisplayFor(model => model.PrestamoAprobado.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FormaPago)
