--- a/WebApp/Views/Pagos/Index.cshtml
+++ b/WebApp/Views/Pagos/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.UrlDocumento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Cuota)
+                @Html.DisplayNameFor(model => model.PrestamoAprobado)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FormaPago)
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.UrlDocumento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cuota.Id)
+                    @Html.DisplayFor(modelItem => item.PrestamoAprobado.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FormaPago.Descripcion)
