--- a/WebApp/Views/PrestamosAprobado/Create.cshtml
+++ b/WebApp/Views/PrestamosAprobado/Create.cshtml
@@ -42,14 +42,19 @@
                 <span asp-validation-for="MontoGastosContratacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MontoGastosMantencionMensual" class="control-label"></label>
-                <input asp-for="MontoGastosMantencionMensual" class="form-control" />
-                <span asp-validation-for="MontoGastosMantencionMensual" class="text-danger"></span>
+                <label asp-for="MontoInteres" class="control-label"></label>
+                <input asp-for="MontoInteres" class="form-control" />
+                <span asp-validation-for="MontoInteres" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MontoSegurosMensual" class="control-label"></label>
-                <input asp-for="MontoSegurosMensual" class="form-control" />
-                <span asp-validation-for="MontoSegurosMensual" class="text-danger"></span>
+                <label asp-for="MontoGastosMantencion" class="control-label"></label>
+                <input asp-for="MontoGastosMantencion" class="form-control" />
+                <span asp-validation-for="MontoGastosMantencion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MontoSeguros" class="control-label"></label>
+                <input asp-for="MontoSeguros" class="form-control" />
+                <span asp-validation-for="MontoSeguros" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaAprobacion" class="control-label"></label>
