--- a/WebApp/Views/Cuotas/Details.cshtml
+++ b/WebApp/Views/Cuotas/Details.cshtml
@@ -46,12 +46,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MontoSeguros)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MontoTotalCuota)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MontoTotalCuota)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UrlDocumento)
         </dt>
