--- a/WebApp/Views/Pagos/Create.cshtml
+++ b/WebApp/Views/Pagos/Create.cshtml
@@ -13,8 +13,8 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CuotaId" class="control-label"></label>
-                <select asp-for="CuotaId" class ="form-control" asp-items="ViewBag.CuotaId"></select>
+                <label asp-for="PrestamoAprobadoId" class="control-label"></label>
+                <select asp-for="PrestamoAprobadoId" class="form-control" asp-items="ViewBag.PrestamoAprobadoId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="FechaPago" class="control-label"></label>
