--- a/WebApp/Views/Pagos/Edit.cshtml
+++ b/WebApp/Views/Pagos/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="CuotaId" class="control-label"></label>
-                <select asp-for="CuotaId" class="form-control" asp-items="ViewBag.CuotaId"></select>
-                <span asp-validation-for="CuotaId" class="text-danger"></span>
+                <label asp-for="PrestamoAprobadoId" class="control-label"></label>
+                <select asp-for="PrestamoAprobadoId" class="form-control" asp-items="ViewBag.PrestamoAprobadoId"></select>
+                <span asp-validation-for="PrestamoAprobadoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaPago" class="control-label"></label>
