--- a/WebApp/Views/PrestamosAprobado/Details.cshtml
+++ b/WebApp/Views/PrestamosAprobado/Details.cshtml
@@ -34,6 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CostoTotalFinanciero)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MontoInteres)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MontoInteres)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MontoGastosContratacion)
         </dt>
@@ -41,16 +47,16 @@
             @Html.DisplayFor(model => model.MontoGastosContratacion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MontoGastosMantencionMensual)
+            @Html.DisplayNameFor(model => model.MontoGastosMantencion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MontoGastosMantencionMensual)
+            @Html.DisplayFor(model => model.MontoGastosMantencion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MontoSegurosMensual)
+            @Html.DisplayNameFor(model => model.MontoSeguros)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MontoSegurosMensual)
+            @Html.DisplayFor(model => model.MontoSeguros)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaAprobacion)
