--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -83,6 +83,8 @@
                                     Configuraciones Prestamos
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <a class="dropdown-item" asp-area="" asp-controller="SolicitudesAprobarDto" asp-action="Index">Solicitudes - Aprobar DTO</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="PrestamosAprobadoDto" asp-action="Index">Prestamos Aprobados - Cuotas DTO</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="PrestamosAprobado" asp-action="Index">Prestamos Aprobado</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Cuotas" asp-action="Index">Cuotas</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Pagos" asp-action="Index">Pagos</a>
