Se agrega cambios para homologar vistas

--- a/WebApp/Views/PrestamosAprobadoDto/Index.cshtml
+++ b/WebApp/Views/PrestamosAprobadoDto/Index.cshtml
@@ -2,10 +2,10 @@
 @model IEnumerable<WebApp.Dtos.PrestamoAprobadoDto>
 
 @{
-    ViewData["Title"] = "Lista de Prestamos Aprobado";
+    ViewData["Title"] = "Lista de Prestamos Aprobado por Pagar";
 }
 
-<h1>Lista de Prestamos Aprobado</h1>
+<h1>Lista de Prestamos Aprobado por Pagar</h1>
 
 <table class="table table-striped">
     <thead class="thead-dark">
