--- a/WebApp/Views/SolicitudesAprobarDto/Index.cshtml
+++ b/WebApp/Views/SolicitudesAprobarDto/Index.cshtml
@@ -2,10 +2,10 @@
 @model IEnumerable<WebApp.Dtos.SolicitudPrestamoDto>
 
 @{
-    ViewData["Title"] = "Lista de Solicitud Prestamos";
+    ViewData["Title"] = "Lista de Solicitud Prestamos por Aprobar";
 }
 
-<h1>Lista de Solicitud Prestamos</h1>
+<h1>Lista de Solicitud Prestamos por Aprobar</h1>
 
 <table class="table table-striped">
     <thead class="thead-dark">
